# master_exp

./: .gitignore
.github/workflows/: build-docker.yml
ml-4m/: .gitignore  Dockerfile  HYDRA_MIGRATION_GUIDE.md  auto_convert_to_hydra.py  convert_to_hydra.py  modularized.py  pyproject.toml  run_generation.py  run_training_4m.py  run_training_4m_fsdp.py  run_training_divae.py.argparse_backup  run_training_vqvae.py  save_vq_tokens.py  test.ipynb  test.py  test_transformations.py  todo.md  train_wordpiece_tokenizer.py
ml-4m/cfgs/: default_run.yaml
ml-4m/conf/: config_4m.yaml  config_4m_fsdp.yaml  config_divae.yaml  config_generation.yaml  config_save_vq_tokens.yaml  config_vqcontrolnet.yaml  config_vqvae.yaml  config_wordpiece_tokenizer.yaml
tracksupport/: .gitignore  check_fuse.py  main.py  pyproject.toml  train.py
tracksupport/cfg/: first.yaml
tracksupport/cfg/model/: mae_tracked.yaml  mvit.yaml  mvit_finder.yaml  videomamba.yaml  vjepa.yaml
tracksupport/cfg/modules/: attentive_pooler.yaml
tracksupport/cfg/training/: default.yaml
tracksupport/src/: models.py
tracksupport/src/backbones/: __init__.py  videomamba.py
tracksupport/src/classification/: attention_pooling.py  mvfoulhead.py
tracksupport/src/datasets/: mvfoul.py
tracksupport/src/runs/: train.py  train_mvit.py  train_utils.py  train_vjepa.py
tracksupport/src/tracker/: basic_tracker.py  frame_selection.py  modules.py
tracksupport/src/tracksupport.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tracksupport/src/utils/: modules.py  mv_foul_parser.py  tensors.py
tracksupport/tests/: test_tracker.py
(+13 files in other folders)
